--- a/package.json
+++ b/package.json
@@ -2,9 +2,11 @@
   "name": "react-super-forms",
   "version": "1.0.0",
   "description": "React form generator component library equipped with validation",
-  "main": "index.js",
+  "main": "./build/index.js",
+  "module": "./build/index.es.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "rollup -c",
     "storybook": "start-storybook -p 6006",
     "build-storybook": "build-storybook"
   },
@@ -20,12 +22,23 @@
   "homepage": "https://github.com/aschwenn/react-super-forms#readme",
   "devDependencies": {
     "@babel/core": "^7.14.0",
+    "@rollup/plugin-commonjs": "^18.1.0",
+    "@rollup/plugin-node-resolve": "^13.0.0",
     "@storybook/addon-actions": "^6.2.9",
     "@storybook/addon-essentials": "^6.2.9",
     "@storybook/addon-links": "^6.2.9",
     "@storybook/react": "^6.2.9",
+    "@typescript-eslint/eslint-plugin": "^4.22.1",
+    "@typescript-eslint/parser": "^4.22.1",
     "babel-loader": "^8.2.2",
+    "eslint": "^7.25.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-prettier": "^3.4.0",
+    "eslint-plugin-react": "^7.23.2",
     "fork-ts-checker-webpack-plugin": "^4.1.6",
+    "prettier": "^2.2.1",
+    "rollup-plugin-peer-deps-external": "^2.2.4",
+    "rollup-plugin-typescript2": "^0.30.0",
     "typescript": "^4.2.4"
   },
   "dependencies": {
