--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,7 @@
     "declarationDir": "build",
     "module": "esnext",
     "target": "es5",
-    "lib": ["es6", "dom", "es2016", "es2017"],
+    "lib": ["es6", "dom", "es2016", "es2017", "esnext"],
     "sourceMap": true,
     "jsx": "react",
     "moduleResolution": "node",
